# CrazySim

./: .gitmodules
crazyflie-firmware/: .gitignore  .gitmodules  Kconfig  build_targets.json
crazyflie-firmware/sitl_make/: CMakeLists.txt  log_param_linker.ld
crazyflie-firmware/sitl_make/cmake/: sitl_gazebo.cmake
crazyflie-firmware/src/config/: FreeRTOSConfig.h  config.h
crazyflie-firmware/src/deck/api/: deck_spi3.c
crazyflie-firmware/src/deck/core/: deck_info.c
crazyflie-firmware/src/deck/drivers/interface/: lpsTdma.h  lpsTdoa2Tag.h
crazyflie-firmware/src/deck/drivers/src/: bigquad.c  flapperdeck.c  ledring12.c  locodeck.c  lpsTdoa2Tag.c  usddeck.c
crazyflie-firmware/src/deck/interface/: deck.h
crazyflie-firmware/src/drivers/interface/: motors.h  uart2.h
crazyflie-firmware/src/drivers/src/: i2c_drv.c  uart2.c  uart_syslink.c  ws2812_cf2.c
crazyflie-firmware/src/hal/interface/: pm.h  sensors_sitl.h  socketlink.h
crazyflie-firmware/src/hal/src/: ledseq.c  sensors.c  sensors_sitl.c  socketlink.c  storage.c  syslink.c  usec_time_sitl.c
crazyflie-firmware/src/init/: main_sitl.c
crazyflie-firmware/src/modules/interface/: crtp.h  crtp_localization_service.h  log.h  param.h  power_distribution.h  queuemonitor.h
crazyflie-firmware/src/modules/interface/estimator/: estimator.h
crazyflie-firmware/src/modules/src/: app_handler.c  comm.c  console.c  crtp_localization_service.c  health.c  log.c  mem.c  msp.c  param_logic.c  param_task.c  platformservice.c  power_distribution_flapper.c  power_distribution_quadrotor.c  power_distribution_sitl.c  sensfusion6.c  stabilizer.c  supervisor.c  system.c
crazyflie-firmware/src/modules/src/controller/: controller.c
crazyflie-firmware/src/modules/src/cpx/: cpx_uart_transport.c
crazyflie-firmware/src/modules/src/estimator/: estimator.c  estimator_complementary.c  estimator_kalman.c  estimator_ukf.c  position_estimator_altitude.c
crazyflie-firmware/src/modules/src/kalman_core/: kalman_core.c
crazyflie-firmware/src/modules/src/lighthouse/: lighthouse_core.c  lighthouse_position_est.c  lighthouse_storage.c
crazyflie-firmware/src/platform/interface/: platform.h  platform_defaults.h  platform_defaults_sitl.h
crazyflie-firmware/src/platform/src/: platform.c  platform_sitl.c
crazyflie-firmware/src/utils/interface/: cf_math.h  cfassert.h  debug.h  num.h
crazyflie-firmware/src/utils/interface/lighthouse/: pulse_processor.h
crazyflie-firmware/src/utils/interface/tdoa/: tdoaEngine.h
crazyflie-firmware/src/utils/src/: cfassert.c  configblocksitl.c
crazyflie-firmware/src/utils/src/lighthouse/: pulse_processor.c  pulse_processor_v1.c  pulse_processor_v2.c
crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/: boundary_map.stl
crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/launch/: jinja_gen.py  setup_gz.bash  sitl_multiagent_square.sh  sitl_multiagent_text.sh  sitl_singleagent.sh
crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/launch/drone_spawn_list/: single_origin.txt  two_example.txt
crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/models/: boundary_map.stl  model.sdf
crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/models/crazyflie/: model.sdf.jinja
crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/models/crazyflie_thrust_upgrade/: model.sdf.jinja
crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/plugins/CrazySim/: CMakeLists.txt  CrtpUtils.h  atomicops.h  crazysim_plugin.cpp  crazysim_plugin.h  crtp.h
crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/worlds/: crazysim_default.sdf
crazyflie-lib-python/cflib/crtp/: udpdriver.py
